snaplogger (1.0.5.0~xenial) xenial; urgency=high

  * Replaced the '-R' option with '-r' to be compatible with `rm -r ...`.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 25 Aug 2019 19:00:05 -0800

snaplogger (1.0.4.0~xenial) xenial; urgency=high

  * Added the user-defined literal named "_sev".
  * Added info about shreding files
  * Added the `shredlog` command.
  * Fixed a bug with $${varname}, it would not recognize the variable.
  * Fixed the get_lower_severity(). without appenders return SEVERITY_ALL.
  * Made the asynchronous test work properly.
  * Added a diagnostic set of tests.
  * Enhanced an error and some tests.
  * Renamed severity.conf as severity.ini so we can install it as is.
  * Added a shredlog.conf file, by default do --delete.
  * Install the bin/shredlog file.
  * Install the shredlog.conf file.
  * Install the severity.ini file.
  * Made the --log-config-path command available in configuration files and
    in variables (it's a bit counter intuitive but that way you can redirect
    the configuration files loader).
  * Wrote the shredlog documentation (part of doxygen).
  * Fixed the usage of --auto + --unlink (it was swapped).

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 21 Aug 2019 01:20:24 -0800

snaplogger (1.0.3.0~xenial) xenial; urgency=high

  * Fixed the message destructor, I moved the call to logger::log_message() to
    the send_message() function so exceptions work as expected.
  * Fixed the macros (SNAP_LOG_...) so they are compatible with the new scheme.
  * Do not allow empty parameter names.
  * Moved the function_data implementation to the .cpp file.
  * Fixed appender::send_message(), f_enabled must be true.
  * Fixed path to project, this is not libutf8.
  * Moved the list of authors to the AUTHOR.txt file.
  * Simplified headers to only include the basic GPL 2.x reference.
  * Added the ${date:day} variable.
  * Put the empty(), clear(), str() functions in our buffer_appender().